# body-engine

./: environment_class.py  main.py  main2.py
basic communication/: bindings.cpp  customantenv.cpp  customantenv.h  main.py  readme.md
basic communication/mujoco_renderer.dSYM/Contents/: Info.plist
communication/basic communication/: bindings.cpp  compile_commands.txt  customantenv.cpp  main.cpp  main.py  mujoco_renderer
communication/communication 2/: PPO_Actor.pth  PPO_Critic.pth  ant_model.xml  asset_components.py  bindings.cpp  body_components.py  compile_commands.txt  customantenv.cpp  customantenv.h  main.py  ppo_agent.py  readme.md  xml_world_episode_0.xml  xml_world_episode_1.xml  xml_world_episode_2.xml  xml_world_episode_3.xml
communication/communication 2/mujoco_renderer.cpython-311-darwin.so.dSYM/Contents/: Info.plist
cpp xml example/: CMakeLists.txt  setup.py  test.py
cpp xml example 2/: GLFWWindowManager.cpp  ant_model.xml  compile_commands.txt  customantenv.cpp  customantenv.h  mujoco_renderer  readme.md
cpp xml example/include/: GLFWWindowManager.h
cpp xml example/src/: GLFWWindowManager.cpp  main.cpp
examples/basic cpp xml example/: compile_commands.txt  readme.md
examples/cpp xml example 2/: GLFWWindowManager.h  ant_model.xml  compile_commands.txt  mujoco_renderer  readme.md
examples/isacc learning/: main.py  readme.md  storage.py  test.py
examples/python xml example/: main.py
good_code/: brain.py  environment.py  main.py
python xml example/: readme.md
viewing xml/: asset_components.py  environment_class.py  main.py
(+9 files in other folders)
